--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@angular/service-worker": "^17.0.8",
     "ngx-quill": "^24.0.4",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
